.metals/metals.log
2022.08.24 00:39:33 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /home/stuart/Source/CodeWars/.metals/lsp.trace.json or /home/stuart/.cache/metals/lsp.trace.json
2022.08.24 00:39:34 INFO  logging to file /home/stuart/Source/CodeWars/.metals/metals.log
2022.08.24 00:39:34 INFO  Started: Metals version 0.11.8 in workspace '/home/stuart/Source/CodeWars' for client Visual Studio Code 1.70.1.
2022.08.24 00:39:36 WARN  Flyway upgrade recommended: H2 2.1.214 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.1.210.
2022.08.24 00:39:36 INFO  time: initialize in 2.3s
2022.08.24 00:39:37 WARN  Build server is not auto-connectable.
2022.08.24 00:39:37 WARN  no build tool detected in workspace '/home/stuart/Source/CodeWars'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2022.08.24 00:39:37 WARN  no build target for: /home/stuart/Source/CodeWars/7KYU/Sum of Odd Numbers/solution.scala
2022.08.24 00:39:45 INFO  no build target found for /home/stuart/Source/CodeWars/7KYU/Sum of Odd Numbers/solution.scala. Using presentation compiler with project's scala-library version: 3.1.3
2022.08.24 00:39:46 INFO  time: code lens generation in 4.72s
Aug 24, 2022 12:45:43 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Aug 24, 2022 12:45:44 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Aug 24, 2022 12:45:44 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Aug 24, 2022 12:47:27 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Aug 24, 2022 12:47:42 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Aug 24, 2022 12:48:17 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2022.08.24 00:52:28 WARN  no build target for: /home/stuart/Source/CodeWars/7KYU/Number of Rectangles in a Grid/solution.java
2022.08.24 00:52:29 WARN  Running javac-semanticdb failed for file:///home/stuart/Source/CodeWars/7KYU/Number%20of%20Rectangles%20in%20a%20Grid/solution.java. Output:
semanticdb-javac: unknown flag 'of'

semanticdb-javac: unknown flag 'Rectangles'

semanticdb-javac: unknown flag 'in'

semanticdb-javac: unknown flag 'a'

semanticdb-javac: unknown flag 'Grid'

2022.08.24 00:52:31 WARN  no build target for: /home/stuart/Source/CodeWars/7KYU/Number of Rectangles in a Grid/solution.java
2022.08.24 00:52:31 WARN  Running javac-semanticdb failed for file:///home/stuart/Source/CodeWars/7KYU/Number%20of%20Rectangles%20in%20a%20Grid/solution.java. Output:
semanticdb-javac: unknown flag 'of'

semanticdb-javac: unknown flag 'Rectangles'

semanticdb-javac: unknown flag 'in'

semanticdb-javac: unknown flag 'a'

semanticdb-javac: unknown flag 'Grid'

/home/stuart/Source/CodeWars/7KYU/Number of Rectangles in a Grid/solution.java:1: error: class Solution is public, should be declared in a file named Solution.java
public class Solution {
       ^
1 error
